[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hub.gd" id="1"]

[node name="Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="AccountPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0

[node name="VBox" type="VBoxContainer" parent="AccountPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="AccountPanel/VBox"]
layout_mode = 2
text = "Create Account"

[node name="HandleEdit" type="LineEdit" parent="AccountPanel/VBox"]
layout_mode = 2
placeholder_text = "Handle"

[node name="RigOption" type="OptionButton" parent="AccountPanel/VBox"]
layout_mode = 2

[node name="CreateAccount" type="Button" parent="AccountPanel/VBox"]
layout_mode = 2
text = "Create"

[node name="MainPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -220.0
offset_right = 300.0
offset_bottom = 220.0

[node name="Summary" type="Label" parent="MainPanel"]
layout_mode = 2
autowrap_mode = 2

[node name="StatRow" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="StatHP" type="Button" parent="MainPanel/StatRow"]
layout_mode = 2
text = "+HP"

[node name="StatATK" type="Button" parent="MainPanel/StatRow"]
layout_mode = 2
text = "+ATK"

[node name="StatMAG" type="Button" parent="MainPanel/StatRow"]
layout_mode = 2
text = "+MAG"

[node name="StatINT" type="Button" parent="MainPanel/StatRow"]
layout_mode = 2
text = "+INT"

[node name="ClassChoice" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="ClassCracker" type="Button" parent="MainPanel/ClassChoice"]
layout_mode = 2
text = "Class: Cracker"

[node name="ClassBulwark" type="Button" parent="MainPanel/ClassChoice"]
layout_mode = 2
text = "Class: Bulwark"

[node name="ClassProxy" type="Button" parent="MainPanel/ClassChoice"]
layout_mode = 2
text = "Class: Proxy"

[node name="PerkChoice" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="PerkCache" type="Button" parent="MainPanel/PerkChoice"]
layout_mode = 2
text = "Deep Cache"

[node name="PerkAttack" type="Button" parent="MainPanel/PerkChoice"]
layout_mode = 2
text = "Adrenal Compiler"

[node name="PerkInt" type="Button" parent="MainPanel/PerkChoice"]
layout_mode = 2
text = "Quantum Mind"

[node name="StartRun" type="Button" parent="MainPanel"]
layout_mode = 2
text = "Start Run (S)"

[node name="DeckBuilder" type="Button" parent="MainPanel"]
layout_mode = 2
text = "Deck Builder (D)"

[node name="Save" type="Button" parent="MainPanel"]
layout_mode = 2
text = "Save"

[node name="CrtToggle" type="CheckButton" parent="MainPanel"]
layout_mode = 2
text = "CRT Filter"

[connection signal="pressed" from="AccountPanel/VBox/CreateAccount" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="MainPanel/StartRun" to="." method="_on_start_run_pressed"]
[connection signal="pressed" from="MainPanel/DeckBuilder" to="." method="_on_deck_builder_pressed"]
[connection signal="pressed" from="MainPanel/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MainPanel/StatRow/StatHP" to="." method="_on_stat_hp_pressed"]
[connection signal="pressed" from="MainPanel/StatRow/StatATK" to="." method="_on_stat_atk_pressed"]
[connection signal="pressed" from="MainPanel/StatRow/StatMAG" to="." method="_on_stat_mag_pressed"]
[connection signal="pressed" from="MainPanel/StatRow/StatINT" to="." method="_on_stat_int_pressed"]
[connection signal="pressed" from="MainPanel/ClassChoice/ClassCracker" to="." method="_on_class_pick_pressed" binds= ["Cracker"]]
[connection signal="pressed" from="MainPanel/ClassChoice/ClassBulwark" to="." method="_on_class_pick_pressed" binds= ["Bulwark"]]
[connection signal="pressed" from="MainPanel/ClassChoice/ClassProxy" to="." method="_on_class_pick_pressed" binds= ["Proxy"]]
[connection signal="pressed" from="MainPanel/PerkChoice/PerkCache" to="." method="_on_perk_pick_pressed" binds= ["Deep Cache"]]
[connection signal="pressed" from="MainPanel/PerkChoice/PerkAttack" to="." method="_on_perk_pick_pressed" binds= ["Adrenal Compiler"]]
[connection signal="pressed" from="MainPanel/PerkChoice/PerkInt" to="." method="_on_perk_pick_pressed" binds= ["Quantum Mind"]]
[connection signal="toggled" from="MainPanel/CrtToggle" to="." method="_on_crt_toggle_toggled"]
